run cell forcing generte

--- a/docs/user_guide.ipynb
+++ b/docs/user_guide.ipynb
@@ -11,7 +11,9 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\", category=UserWarning)\n",
     "import logging\n",
-    "logging.basicConfig(level=logging.WARN)"
+    "logging.basicConfig(level=logging.WARN)\n",
+    "logger = logging.getLogger('esmvalcore')\n",
+    "logger.setLevel(logging.WARNING)"
    ]
   },
   {
@@ -291,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "2e034d13-e58c-4226-bd94-7924d3bbf155",
    "metadata": {},
    "outputs": [],
@@ -387,54 +389,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "5e887394",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ERROR:esmvalcore._recipe_checks:No input files found for variable {'mip': 'fx', 'preprocessor': 'rough_cutout', 'variable_group': 'orog', 'short_name': 'orog', 'diagnostic': 'wflow_daily', 'dataset': 'ERA5', 'project': 'OBS6', 'tier': 3, 'type': 'reanaly', 'version': 1, 'recipe_dataset_index': 0, 'alias': 'ERA5', 'original_short_name': 'orog', 'standard_name': 'surface_altitude', 'long_name': 'Surface Altitude', 'units': 'm', 'modeling_realm': ['land'], 'frequency': 'fx'}\n",
-      "ERROR:esmvalcore._recipe_checks:Looked for files matching: /mnt/c/Users/PeterKalverla/climatedata/obs6/Tier3/ERA5/OBS6_ERA5_reanaly_1_fx_orog[_.]*nc\n",
-      "ERROR:esmvalcore._recipe_checks:Set 'log_level' to 'debug' to get more information\n",
-      "ERROR:esmvalcore._recipe_checks:No input files found for variable {'mip': 'day', 'preprocessor': 'rough_cutout', 'start_year': 1991, 'end_year': 1991, 'variable_group': 'psl', 'short_name': 'psl', 'diagnostic': 'wflow_daily', 'dataset': 'ERA5', 'project': 'OBS6', 'tier': 3, 'type': 'reanaly', 'version': 1, 'recipe_dataset_index': 0, 'alias': 'ERA5', 'original_short_name': 'psl', 'standard_name': 'air_pressure_at_mean_sea_level', 'long_name': 'Sea Level Pressure', 'units': 'Pa', 'modeling_realm': ['atmos'], 'frequency': 'day'}\n",
-      "ERROR:esmvalcore._recipe_checks:Looked for files matching: /mnt/c/Users/PeterKalverla/climatedata/obs6/Tier3/ERA5/OBS6_ERA5_reanaly_1_day_psl[_.]*nc\n",
-      "ERROR:esmvalcore._recipe_checks:Set 'log_level' to 'debug' to get more information\n",
-      "ERROR:esmvalcore._recipe_checks:No input files found for variable {'mip': 'day', 'preprocessor': 'rough_cutout', 'start_year': 1991, 'end_year': 1991, 'variable_group': 'rsds', 'short_name': 'rsds', 'diagnostic': 'wflow_daily', 'dataset': 'ERA5', 'project': 'OBS6', 'tier': 3, 'type': 'reanaly', 'version': 1, 'recipe_dataset_index': 0, 'alias': 'ERA5', 'original_short_name': 'rsds', 'standard_name': 'surface_downwelling_shortwave_flux_in_air', 'long_name': 'Surface Downwelling Shortwave Radiation', 'units': 'W m-2', 'modeling_realm': ['atmos'], 'frequency': 'day'}\n",
-      "ERROR:esmvalcore._recipe_checks:Looked for files matching: /mnt/c/Users/PeterKalverla/climatedata/obs6/Tier3/ERA5/OBS6_ERA5_reanaly_1_day_rsds[_.]*nc\n",
-      "ERROR:esmvalcore._recipe_checks:Set 'log_level' to 'debug' to get more information\n",
-      "ERROR:esmvalcore._recipe_checks:No input files found for variable {'mip': 'CFday', 'preprocessor': 'rough_cutout', 'start_year': 1991, 'end_year': 1991, 'variable_group': 'rsdt', 'short_name': 'rsdt', 'diagnostic': 'wflow_daily', 'dataset': 'ERA5', 'project': 'OBS6', 'tier': 3, 'type': 'reanaly', 'version': 1, 'recipe_dataset_index': 0, 'alias': 'ERA5', 'original_short_name': 'rsdt', 'standard_name': 'toa_incoming_shortwave_flux', 'long_name': 'TOA Incident Shortwave Radiation', 'units': 'W m-2', 'modeling_realm': ['atmos'], 'frequency': 'day'}\n",
-      "ERROR:esmvalcore._recipe_checks:Looked for files matching: /mnt/c/Users/PeterKalverla/climatedata/obs6/Tier3/ERA5/OBS6_ERA5_reanaly_1_CFday_rsdt[_.]*nc\n",
-      "ERROR:esmvalcore._recipe_checks:Set 'log_level' to 'debug' to get more information\n",
-      "ERROR:esmvalcore._recipe:Could not create all tasks\n",
-      "ERROR:esmvalcore._recipe:Missing data for preprocessor wflow_daily/orog:\n",
-      "- Missing data for ERA5: orog\n",
-      "ERROR:esmvalcore._recipe:Missing data for preprocessor wflow_daily/psl:\n",
-      "- Missing data for ERA5: psl\n",
-      "ERROR:esmvalcore._recipe:Missing data for preprocessor wflow_daily/rsds:\n",
-      "- Missing data for ERA5: rsds\n",
-      "ERROR:esmvalcore._recipe:Missing data for preprocessor wflow_daily/rsdt:\n",
-      "- Missing data for ERA5: rsdt\n"
-     ]
-    },
-    {
-     "ename": "RecipeError",
-     "evalue": "Could not create all tasks",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRecipeError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-64235374a1eb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m forcing = ewatercycle.forcing.generate(\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mtarget_model\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'wflow'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mdataset\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'ERA5'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mstart_time\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"1991-01-01T00:00:00Z\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mend_time\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"1991-01-31T00:00:00Z\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/ewatercycle/ewatercycle/ewatercycle/forcing/__init__.py\u001b[0m in \u001b[0;36mgenerate\u001b[0;34m(target_model, dataset, start_time, end_time, shape, model_specific_options)\u001b[0m\n\u001b[1;32m    151\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mmodel_specific_options\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    152\u001b[0m         \u001b[0mmodel_specific_options\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 153\u001b[0;31m     forcing_info = constructor.generate(dataset, start_time, end_time, shape,\n\u001b[0m\u001b[1;32m    154\u001b[0m                                         **model_specific_options)\n\u001b[1;32m    155\u001b[0m     \u001b[0mforcing_info\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/ewatercycle/ewatercycle/ewatercycle/forcing/_wflow.py\u001b[0m in \u001b[0;36mgenerate\u001b[0;34m(cls, dataset, start_time, end_time, shape, dem_file, extract_region)\u001b[0m\n\u001b[1;32m     91\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m         \u001b[0;31m# generate forcing data and retreive useful information\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 93\u001b[0;31m         \u001b[0mrecipe_output\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrecipe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     94\u001b[0m         \u001b[0mforcing_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrecipe_output\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'wflow_daily/script'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata_files\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     95\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/ESMValCore/esmvalcore/experimental/recipe.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self, task, session)\u001b[0m\n\u001b[1;32m    132\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    133\u001b[0m         \u001b[0;32mwith\u001b[0m \u001b[0mlog_to_dir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 134\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_load\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    135\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    136\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/ESMValCore/esmvalcore/experimental/recipe.py\u001b[0m in \u001b[0;36m_load\u001b[0;34m(self, session)\u001b[0m\n\u001b[1;32m     97\u001b[0m         \u001b[0mlogger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpprint\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfig_user\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     98\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 99\u001b[0;31m         return RecipeEngine(raw_recipe=self.data,\n\u001b[0m\u001b[1;32m    100\u001b[0m                             \u001b[0mconfig_user\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconfig_user\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    101\u001b[0m                             recipe_file=self.path)\n",
-      "\u001b[0;32m~/ESMValCore/esmvalcore/_recipe.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, raw_recipe, config_user, initialize_tasks, recipe_file)\u001b[0m\n\u001b[1;32m    984\u001b[0m             raw_recipe.get('documentation', {}))\n\u001b[1;32m    985\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 986\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtasks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minitialize_tasks\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0minitialize_tasks\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    987\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mRecipeError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mex\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    988\u001b[0m             \u001b[0mlogger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merror\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/ESMValCore/esmvalcore/_recipe.py\u001b[0m in \u001b[0;36minitialize_tasks\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1392\u001b[0m             \u001b[0mrecipe_error\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRecipeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Could not create all tasks'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1393\u001b[0m             \u001b[0mrecipe_error\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfailed_tasks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfailed_tasks\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1394\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mrecipe_error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1395\u001b[0m         \u001b[0mcheck\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtasks_valid\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtasks\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1396\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRecipeError\u001b[0m: Could not create all tasks"
+      "Forcing data for Wflow\n",
+      "----------------------\n",
+      "Directory: /home/sarah/GitHub/ewatercycle/docs/examples/recipe_wflow_20210719_145723/work/wflow_daily/script\n",
+      "Start time: 1990-01-01T00:00:00Z\n",
+      "End time: 1990-01-31T00:00:00Z\n",
+      "Shapefile: /home/sarah/GitHub/ewatercycle/docs/examples/data/Rhine/Rhine.shp\n",
+      "Additional information for model config:\n",
+      "  - netcdfinput: wflow_ERA5_Rhine_1990_1990.nc\n",
+      "  - Precipitation: /pr\n",
+      "  - Temperature: /tas\n",
+      "  - EvapoTranspiration: /pet\n",
+      "  - Inflow: None\n"
      ]
     }
    ],
@@ -442,8 +418,8 @@
     "forcing = ewatercycle.forcing.generate(\n",
     "    target_model='wflow', \n",
     "    dataset='ERA5',\n",
-    "    start_time=\"1991-01-01T00:00:00Z\",\n",
-    "    end_time=\"1991-01-31T00:00:00Z\",\n",
+    "    start_time=\"1990-01-01T00:00:00Z\",\n",
+    "    end_time=\"1990-01-31T00:00:00Z\",\n",
     "    shape='./examples/data/Rhine/Rhine.shp',\n",
     "    model_specific_options = {\n",
     "        'dem_file' : './examples/wflow_rhine_sbm_nc/staticmaps/wflow_dem.map',\n",
@@ -772,7 +748,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
