Update chapter on models

--- a/docs/user_guide.ipynb
+++ b/docs/user_guide.ipynb
@@ -211,8 +211,8 @@
     }
    ],
    "source": [
-    "parameters = ewatercycle.parameter_sets.get_parameter_set('wflow_rhine_sbm_nc')\n",
-    "print(parameters)"
+    "parameter_set = ewatercycle.parameter_sets.get_parameter_set('wflow_rhine_sbm_nc')\n",
+    "print(parameter_set)"
    ]
   },
   {
@@ -241,7 +241,7 @@
     }
    ],
    "source": [
-    "parameters.supported_model_versions"
+    "parameter_set.supported_model_versions"
    ]
   },
   {
@@ -392,7 +392,8 @@
    "execution_count": 3,
    "id": "5e887394",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "tags": []
    },
    "outputs": [
     {
@@ -439,7 +440,9 @@
   {
    "cell_type": "markdown",
    "id": "57c43415",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "`ewatercycle_forcing.yaml`:\n",
     "\n",
@@ -460,11 +463,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "889d4e6d-a69b-44c0-ba69-6ba77654e30e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "reloaded_forcing = ewatercycle.forcing.load(\n",
-    "    directory='/path/to/forcing/output/'\n",
+    "    directory='/home/sarah/GitHub/ewatercycle/docs/examples/recipe_wflow_20210719_145723/work/wflow_daily/script'\n",
     ")"
    ]
   },
@@ -477,15 +482,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b6a2e409",
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "1a4635ce-cfcd-4c78-9997-6db09a29bc45",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Creating, setting up, and initializing a model instance\n",
-    "\n",
-    "Now that we have created a forcing and selected a version of the model and a parameter set, we can create a model instance. When creating an instance we will have to select the version of the model to use, a parameter set, and a forcing. This will all be combined into an instance object. This can then be inspected for available parameters and default values, setup to create the configuration file, work_dir containing input files, and container, and initialized to prepare a model for running.\n",
-    "\n",
-    "The way models are created, setup, and initialized matches PyMT as much as possible. There is currently no 'run' method as this convenance method makes it harder for users to create a more advanced usecase from a simple example."
+    "import ewatercycle.models"
    ]
   },
   {
@@ -495,24 +498,152 @@
     "tags": []
    },
    "source": [
-    "### Model versions\n",
+    "eWaterCycle currently integrates the following models:\n",
     "\n",
-    "eWaterCycle supports a number of models, and new once can be adding using a straightforward process. These are represented using a Python Class (e.g. ewatercycle.models.Wflow). Several version of a model may be available. To help with reproducibility the version of a model must always be specified when creating a model instance. A class function is available to retrieve a list of model versions.\n"
+    "* [wflow](https://ewatercycle.readthedocs.io/en/latest/examples/wflow.html)\n",
+    "* [pcrglobwb](https://ewatercycle.readthedocs.io/en/latest/examples/pcrglobwb.html)\n",
+    "* [marrmot M01](https://ewatercycle.readthedocs.io/en/latest/examples/marrmotm01.html)\n",
+    "* [marrmot M14](https://ewatercycle.readthedocs.io/en/latest/examples/marrmotm14.html)\n",
+    "* [lisflood](https://ewatercycle.readthedocs.io/en/latest/examples/lisflood.html)\n",
+    "\n",
+    "and we're expecting to add more models soon. The process for adding new models is documented in [Adding models](https://ewatercycle.readthedocs.io/en/latest/adding_models.html)\n",
+    "\n",
+    "### Model versions\n",
+    "To help with reproducibility the version of a model must always be specified when creating a model instance. The available versions can be seen like so:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "98e1e41e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('2020.1.1',)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import ewatercycle.models\n",
+    "\n",
+    "ewatercycle.models.Wflow.available_versions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6a2e409",
+   "metadata": {},
+   "source": [
+    "### Creating, setting up, and initializing a model instance\n",
+    "\n",
+    "The way models are created, setup, and initialized matches [PyMT](https://pymt.readthedocs.io/en/latest/quickstart.html#run-a-model) as much as possible.\n",
+    "There are three steps:\n",
+    "\n",
+    "- instantiate (create a python object that represents the model)\n",
+    "- setup (create a container with the right model, directories, and configuration files)\n",
+    "- initialize (start the model inside the container)\n",
+    "\n",
+    "To a new user, these steps can be confusing as they seem to be related to \"starting a model\". However, you will see that there are some useful things that we can do in between each of these steps. As a side effect, splitting these steps also makes it easier to run a lot of models in parallel (e.g. for calibration). Experience tells us that you will quickly get used to it. \n",
+    "\n",
+    "When a model instance is created, we have to specify the version and pass in a suitable parameter set and forcing. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98e1e41e",
-   "metadata": {
-    "tags": []
-   },
+   "id": "a80d27c7-c298-47f2-b9c1-feb97069feae",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import ewatercycle.models.Wflow\n",
+    "model_instance = ewatercycle.models.Wflow(version='2020.1.1', parameter_set=parameter_set, forcing=forcing)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "109eed95-46eb-4f91-82a8-7a43ca157c50",
+   "metadata": {},
+   "source": [
+    "In some specific cases the parameter set (e.g. for marrmot) or the forcing (e.g. when it is already included in the parameter set) is not needed.\n",
     "\n",
-    "ewatercycle.models.Wflow.available_versions\n",
-    "# [\"2019.1\", \"2020.1\"]"
+    "Most models have a variety of parameters that can be set. An opiniated subset of these parameters is exposed through the eWaterCycle API. We focus on those settings that are relevant from a scientific point of view and prefer to hide technical settings. These parameters and their default values can be inspected as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cfb77df-8815-45a1-8741-c88447790656",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_instance.parameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6de4a382-16f8-40b0-b50e-a9f138364172",
+   "metadata": {},
+   "source": [
+    "The start date and end date are automatically set based on the forcing data. \n",
+    "\n",
+    "Alternative values for each of these parameters can be passed on to the setup function:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05a008da-486b-4f9c-b2fc-c3944a8c054c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cfg_file, cfg_dir = model_instance.setup(\n",
+    "    end_time=\"1990-12-15T00:00:00Z\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be09b8e3-5b23-4384-9e01-619363108f81",
+   "metadata": {},
+   "source": [
+    "The `setup` function does the following:\n",
+    "\n",
+    "- Create a config directory which serves as the current working directory for the mode instance\n",
+    "- Creates a configuration file in this directory based on the settings\n",
+    "- Starts a container with the requested model version and access to the forcing and parameter sets.\n",
+    "- Input is mounted read-only, the working directory is mounted read-write (if a model cannot cope with inputs outside the working directory, the input will be copied).\n",
+    "- Setup will complain about incompatible model version, parameter_set, and forcing.\n",
+    "\n",
+    "After `setup` but before `initialize` everything is good-to-go, but nothing has been done yet. This is\n",
+    "an opportunity to inspect the generated configuration file, and make any changes manually that could not be\n",
+    "done through the setup method. \n",
+    "\n",
+    "To modify the config file: print the path, open it in an editor, and save:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92945715-4919-4ea5-9678-727cdd1d4cd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(cfg_file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8f120cb-0815-4028-9719-6efbfa5dde08",
+   "metadata": {},
+   "source": [
+    "Once you're happy with the setup, it is time to initialize the model. You'll have to pass in the config file, even if you've not made any changes:"
    ]
   },
   {
@@ -522,54 +653,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ewatercycle.models\n",
-    "\n",
-    "#A parameter set and forcing object must be loaded or found before instanciating a model.\n",
-    "\n",
-    "#Creates as model instance from a model version, parameter_set, and forcing\n",
-    "#version = mandatory\n",
-    "#parameter set = optional (e.g. MARRMOT does not need one)\n",
-    "#forcing = mandatory for now. At some point we may want to support feeding forcing to a model\n",
-    "#while running it using set_variable('temperature') and such.\n",
-    "model_instance = ewatercycle.models.Wflow(version='2019.1', parameter_set=parameter_set, forcing=forcing)\n",
-    "\n",
-    "#using the parameters property all parameter defaults can be obtained.\n",
-    "#this is possibly a subset of everything that can be configured in the config file of model, and up to the\n",
-    "#creator of the model class to implement. For non-science settings such as logging settings, or file names\n",
-    "# for all parameter files it does not always make sense to expose these.\n",
-    "model_instance.parameters\n",
-    "#soil_depth: 9 (defaults to value in parameter set e.g. in a config template)\n",
-    "#start_time=\"2021-05-07T13:32:00Z\" (defaults to start of forcing)\n",
-    "#end_time=\"2021-05-07T13:32:00Z\" (defaults to end of forcing)\n",
-    "#not all parameter files can be set, but for some it may make sense.\n",
-    "#land_mask='some/land/mask/in/the/parameter_set.dem'\n",
-    "\n",
-    "#the Setup function does the following:\n",
-    "#- Create a directory which serves as the current working directory for the mode instance\n",
-    "#- Creates a configuration file in this working directory based on the settings\n",
-    "#- Creates a container instance for the exact version of the model requesed\n",
-    "#- Makes the forcing, parameter set and and working directory available to the container using mounts.\n",
-    "#- If a model cannot cope with forcing and parameter set outside the working directory it is copied\n",
-    "#  to the working_directory instead.\n",
-    "#- Input is mounted read-only, the working directory is mounted read-write.\n",
-    "#- Setup will complain about incompatible model version, parameter_set, and forcing.\n",
-    "cfg_file, work_dir = model_instance.setup(\n",
-    "    land_mask='/some/land/mask.dem', # if outside of mounts, add a mount, or copy into working dir, or :'(\n",
-    "    soil_depth=9,\n",
-    "    start_time=\"2021-05-07T13:32:00Z\",\n",
-    "    end_time=\"2021-05-07T13:32:00Z\"\n",
-    ")\n",
-    "\n",
-    "#After setup but before initialize everything is good-to-go, but nothing has been done yet. This is\n",
-    "#An opportunity to inspect the generated configuration file, and make any changes manually that could not be\n",
-    "#done through the setup method. Splitting these also makes it easier to run initialize in parallel in case a\n",
-    "#lot of models are created simultaneously (e.g. when calibrating a model)\n",
-    "\n",
-    "# To modify, open it in an editor and save\n",
-    "print(cfg_file)\n",
-    "\n",
-    "#This function will initialize the model using the files created above. For some models this can take some time.\n",
-    "model_instance.initialize(cfg_file)"
+    "model_instance.initialize(cfg_file)  # for some models, this step can take some time"
    ]
   },
   {
@@ -577,76 +661,77 @@
    "id": "967fd35b",
    "metadata": {},
    "source": [
-    "### Running a model and getting output\n",
+    "### Running (and interacting with) a model\n",
     "\n",
-    "Once initalized a model_instanced can be used by calling functions for running a single timestep (`update`), setting variables, and getting variables. Besides the rather lowlevel BMI functions several convenience functions are also available. These returns objects that make sense for the type of values returned, such as pandas DataFram and xarray DataArray or Dataset."
+    "A model instance can be controlled by calling functions for running a single timestep (`update`), setting variables, and getting variables. Besides the rather lowlevel BMI functions like `get_value` and `set_value`, we also added convenience functions such as `get_value_as_xarray`, `get_value_at_coords`, `time_as_datetime`, and `time_as_isostr`. These make it even more pleasant to interact with the model.\n",
+    "\n",
+    "For example, to run our model instance from start to finish, fetching the value of variable `discharge` at the location of a grdc station:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de17f6d8-679f-4a4b-a5b9-c598b9de6f27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grdc_latitude = ... # todo run observation cells below on system with GRDC data\n",
+    "grdc_longitude = ..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "449578cc-2579-4eef-9f88-aa7a9cc52f02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output = []\n",
+    "while model_instance.time < model_instance.end_time:\n",
+    "    model_instance.update()\n",
+    "    \n",
+    "    discharge = model_instance.get_value_at_coords('RiverRunoff', lon=[grdc_longitude], lat=[grdc_latitudes])[0]\n",
+    "    output.append(discharge)\n",
+    "    \n",
+    "    # Here you could do whatever you like, e.g. update soil moisture values before doing the next timestep.\n",
+    "    \n",
+    "    print(model_instance.time_as_isostr, end=\"\\r\")  # \"\\r\" clears the output before printing the next timestamp"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dff204cb",
+   "id": "8013ea24-8fab-4aa5-bb6f-d1a24ff53da5",
    "metadata": {},
    "source": [
-    "#### TODO Merge these cells below\n",
-    "In the loop, only use get_value_at_coords to keep track of a single outlet point.\n",
-    "At the end, show get_value_as_xarray to show you can also get the whole field"
+    "We can also get the entire model field at a single time step. To simply plot it:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0dc4da66",
+   "id": "8e8eddd6-48cb-4c30-bf83-a42bed630237",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#example storing all output of a certain field.\n",
-    "output = []\n",
-    "while model_instance.time < model_instance.end_time:\n",
-    "    \n",
-    "    # Update the model (takes a few seconds per timestep)\n",
-    "    model_instance.update() \n",
-    "    \n",
-    "    #store entire discharge field\n",
-    "    discharge = model.get_value_as_xarray('Discharge')\n",
-    "    output.append(discharge)\n",
-    "        \n",
-    "    # Show progress\n",
-    "    print(reference.time, end=\"\\r\")  # \"\\r\" clears the output before printing the next timestamp\n",
-    "    \n",
-    "result = xarray.merge(output)\n",
-    "\n",
-    "result\n",
-    "#xarray with full output of discharge field"
+    "model_instance.get_value_as_xarray('RiverRunoff').plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a88e072-1e41-4f48-8d66-2254d697438c",
+   "metadata": {},
+   "source": [
+    "If you want to know which variables are available, you can use"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a18150e",
+   "id": "267ce865-5d61-4a74-97f9-a7412b961316",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#example storing a timeseries for a single location of a certain field\n",
-    "\n",
-    "#some location of interest within the model\n",
-    "output_latitude = 55.4\n",
-    "output_longitude = 20.0\n",
-    "\n",
-    "simulated_discharge = pd.DataFrame(index='time', columns=['discharge'])\n",
-    "while model_instance.time < model_instance.end_time:\n",
-    "    \n",
-    "    # Update the model (takes a few seconds per timestep)\n",
-    "    model_instance.update() \n",
-    "    \n",
-    "    # Track discharge at station location\n",
-    "    discharge = model_instance.get_value_at_location('Discharge', latitude=output_latitude, longitude=output_longitude, method='nearest')\n",
-    "    simulated_discharge.append({\"time\":reference.time, \"discharge\": discharge})\n",
-    "    \n",
-    "    # Show progress\n",
-    "    print(model_instance.time, end=\"\\r\")  # \"\\r\" clears the output before printing the next timestamp\n",
-    "    \n",
-    "model_output\n",
-    "#nice table of all dischage values over time for a single location"
+    "model_instance.output_var_names"
    ]
   },
   {
@@ -659,26 +744,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "69d6d858-e4a7-4393-8537-88fe20096911",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ewatercycle.observation.grdc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d21a924-4c87-4ed9-8e87-1d39baf699b9",
+   "metadata": {},
+   "source": [
+    "This function automatically fetches the location of the GRDC data from the configuration file.\n",
+    "Start and end dates are fetched from the model instance"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "13a4b9ce",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Read GRDC data\n",
+    "grdc_station_id = 6335020\n",
     "\n",
-    "import ewatercycle.observation.grdc\n",
-    "\n",
-    "grdc_station_id = 4147380\n",
-    "\n",
-    "#This function automatically fetches the location of the GRDC data from the configuration file\n",
-    "#Start and end dates are fetched from the model instance\n",
     "observations = ewatercycle.observation.grdc.get_grdc_data(\n",
     "    station_id=grdc_station_id,\n",
-    "    start_date=model_instance.start_time.date(),\n",
-    "    end_date=model_instance.end_time.date(),\n",
+    "    start_time=\"1990-01-01T00:00:00Z\", # model_instance.start_time_as_isostr\n",
+    "    end_time=\"1990-12-31T00:00:00Z\"\n",
     ")\n",
-    "observations\n",
-    "#xarray containing grdc data"
+    "\n",
+    "observations.head()"
    ]
   },
   {
@@ -748,7 +846,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
