Observations and analysis chapters

--- a/docs/user_guide.ipynb
+++ b/docs/user_guide.ipynb
@@ -736,10 +736,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "50a7baaf-3153-49b0-9568-61eceb0e253e",
+   "metadata": {},
+   "source": [
+    "A model instance running in a container can take up quite a bit of resources on the system. When you're done with an experiment, it is good practice to always finalize the model. This will make sure the model properly performs any tear-down tasks and eventually the container will be destroyed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98c244bf-0ef6-4346-90fd-a24bd602a2e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_instance.finalize()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d10584b1",
    "metadata": {},
    "source": [
-    "## Observations"
+    "## Observations\n",
+    "\n",
+    "eWaterCycle also includes utilities to easily load observations. Currently, eWaterCycle systems provide access to GRDC data, and we're hoping to expand this in the future."
    ]
   },
   {
@@ -757,8 +777,7 @@
    "id": "2d21a924-4c87-4ed9-8e87-1d39baf699b9",
    "metadata": {},
    "source": [
-    "This function automatically fetches the location of the GRDC data from the configuration file.\n",
-    "Start and end dates are fetched from the model instance"
+    "To load GRDC station data:"
    ]
   },
   {
@@ -780,26 +799,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f35c3507",
+   "cell_type": "markdown",
+   "id": "9f1f8d9d-7bc4-4af2-b3f7-b51a3b2c752d",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Combine simulated and observated discharge into a single dataframe\n",
-    "\n",
-    "import pandas\n",
-    " \n",
-    "simulated_discharge_df = pandas.DataFrame(\n",
-    "    {'simulation': model_output}, index=timestamps\n",
-    ")\n",
-    "observations_df = observations.streamflow.to_dataframe().rename(\n",
-    "    columns={'streamflow': 'observation'}\n",
-    ")\n",
-    "discharge = simulated_discharge_df.join(observations_df)\n",
-    "discharge\n",
-    "\n",
-    "#table with simulated and observed discharge"
+    "Since not all GRDC stations are complete, some information is printed to inform you about the quality of the data."
    ]
   },
   {
@@ -808,7 +812,37 @@
    "metadata": {},
    "source": [
     "## Analysis\n",
-    "Once a model has run we can analyse the result. For this example we will assume a DataFrame was created with values over time for a certain location for which GRDC station data is available"
+    "\n",
+    "To easily analyse model output, eWaterCycle also includes an `analysis` module."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "dc633071-e483-4478-af82-2b72437fb5cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ewatercycle.analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e75439c-9afc-4201-ae4a-1ddc5286c674",
+   "metadata": {},
+   "source": [
+    "For example, we will plot a hydrograph of the model run and GRDC observations. To this end, we combine the two timeseries in a single dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f35c3507",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined_discharge = observations.rename(columns={\"streamflow\": \"GRDC\"})\n",
+    "combined_discharge['wflow'] = output"
    ]
   },
   {
@@ -818,29 +852,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Plot hydrograph\n",
-    "\n",
-    "import ewatercycle.analysis\n",
-    "\n",
-    "#todo: also add forcing to this hydrograph in some smart way\n",
     "ewatercycle.analysis.hydrograph(\n",
-    "    discharge=discharge,\n",
-    "    reference='observation',\n",
-    ")\n",
-    "\n",
-    "#nice hydrograph"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6b0be972",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#finalize the model.\n",
-    "#as a side effect also destroys the container\n",
-    "model_instance.finalize()"
+    "    discharge=combined_discharge,\n",
+    "    reference='GRDC',\n",
+    ")"
    ]
   }
  ],
