--- a/docs/user_guide.ipynb
+++ b/docs/user_guide.ipynb
@@ -739,6 +739,8 @@
    "id": "50a7baaf-3153-49b0-9568-61eceb0e253e",
    "metadata": {},
    "source": [
+    "### Destroying the model\n",
+    "\n",
     "A model instance running in a container can take up quite a bit of resources on the system. When you're done with an experiment, it is good practice to always finalize the model. This will make sure the model properly performs any tear-down tasks and eventually the container will be destroyed."
    ]
   },
